# fix-lazy-llms-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: OUTLINE.md  main.aux  main.bbl  main.blg  main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: accuracy_main.tex  diff_ci.tex
papers/: README.md
papers/pages_lazy/: 2023_lazy_llm_learners_acl_chunk_001.txt  2023_lazy_llm_learners_acl_chunk_002.txt  2023_lazy_llm_learners_acl_chunk_003.txt  2023_lazy_llm_learners_acl_chunk_004.txt  2023_lazy_llm_learners_acl_chunk_005.txt  2023_lazy_llm_learners_acl_manifest.txt
papers/pages_self_refine/: 2023_self_refine_chunk_001.txt  2023_self_refine_chunk_002.txt  2023_self_refine_chunk_003.txt  2023_self_refine_chunk_004.txt  2023_self_refine_chunk_005.txt  2023_self_refine_chunk_006.txt  2023_self_refine_chunk_007.txt  2023_self_refine_chunk_008.txt  (+11 more)
results/: arc_samples.json  data_summary.json  gsm8k_samples.json  metadata.json
src/: analysis.py  data.py  eda.py  evaluate.py  llm.py  prompts.py  run_experiments.py  utils.py
(+6 files in other folders)
